Made attributes for ops controller
