# app/Http/Controllers/API/OperationController.php
@@ -2,38 +2,125 @@
 
 namespace App\Http\Controllers\API;
 
+use App\Helpers\Annotations\Access\TypeOfAccessMarker;
+use App\Helpers\Annotations\ApiAccessMarker;
+use App\Helpers\Annotations\ApiEventMarker;
 use App\Helpers\Annotations\ApiTypeMarker;
 use App\Http\Controllers\Controller;
 use App\Sys\Res\Types\Stk\Root;
 use Symfony\Component\HttpFoundation\Response as CodeOf;
+use OpenApi\Attributes as OA;
+use App\Sys\Res\Types\Stk\Root\Evt;
 
 class OperationController extends Controller {
+
+
+    #[OA\Post(
+        path: '/api/v1/operations/unshift',
+        operationId: 'core.operations.unshift',
+        description: "namespace members of the sets can select one or more elements from one set to be unshifted to another ",
+        summary: 'Add elements to the front of the set',
+        responses: [
+            new OA\Response( response: CodeOf::HTTP_NOT_IMPLEMENTED, description: 'Not yet implemented')
+        ]
+    )]
+    #[ApiEventMarker( Evt\Set\SetEnter::class)]
+    #[ApiEventMarker( Evt\Set\SetLeave::class)]
+    #[ApiAccessMarker( TypeOfAccessMarker::SET_MEMBER)]
     #[ApiTypeMarker( Root\Api\Operation\Unshift::class)]
     public function op_unshift() {
         return response()->json([], CodeOf::HTTP_NOT_IMPLEMENTED);
     }
 
 
+    #[OA\Post(
+        path: '/api/v1/operations/combine',
+        operationId: 'core.operations.combine',
+        description: "namespace members of the sets can adjust set contents using logic operations ",
+        summary: 'Add or remove elements between sets',
+        responses: [
+            new OA\Response( response: CodeOf::HTTP_NOT_IMPLEMENTED, description: 'Not yet implemented')
+        ]
+    )]
+    #[ApiEventMarker( Evt\Set\SetEnter::class)]
+    #[ApiEventMarker( Evt\Set\SetLeave::class)]
+    #[ApiAccessMarker( TypeOfAccessMarker::SET_MEMBER)]
     #[ApiTypeMarker( Root\Api\Operation\Combine::class)]
     public function op_combine() {
         return response()->json([], CodeOf::HTTP_NOT_IMPLEMENTED);
     }
 
+
+    #[OA\Post(
+        path: '/api/v1/operations/mutual',
+        operationId: 'core.operations.mutual',
+        description: "Any sets and elements can have mutuals made from the readable attributes ",
+        summary: 'Make a mutual from one or more sets',
+        responses: [
+            new OA\Response( response: CodeOf::HTTP_NOT_IMPLEMENTED, description: 'Not yet implemented')
+        ]
+    )]
+    #[ApiEventMarker( Evt\Set\SetEnter::class)]
+    #[ApiEventMarker( Evt\Set\SetLeave::class)]
+    #[ApiAccessMarker( TypeOfAccessMarker::MIXED)]
     #[ApiTypeMarker( Root\Api\Operation\Mutual::class)]
     public function op_mutual() {
         return response()->json([], CodeOf::HTTP_NOT_IMPLEMENTED);
     }
 
+
+
+
+    #[OA\Post(
+        path: '/api/v1/operations/pop',
+        operationId: 'core.operations.pop',
+        description: "Namespace members of the sets can pop off elements to another set ",
+        summary: 'Pops elements from sets',
+        responses: [
+            new OA\Response( response: CodeOf::HTTP_NOT_IMPLEMENTED, description: 'Not yet implemented')
+        ]
+    )]
+    #[ApiEventMarker( Evt\Set\SetEnter::class)]
+    #[ApiEventMarker( Evt\Set\SetLeave::class)]
+    #[ApiAccessMarker( TypeOfAccessMarker::SET_MEMBER)]
     #[ApiTypeMarker( Root\Api\Operation\Pop::class)]
     public function op_pop() {
         return response()->json([], CodeOf::HTTP_NOT_IMPLEMENTED);
     }
 
+
+    #[OA\Post(
+        path: '/api/v1/operations/push',
+        operationId: 'core.operations.push',
+        description: "Namespace members of the sets can push elements on the top positions of target sets ",
+        summary: 'Push elements to sets',
+        responses: [
+            new OA\Response( response: CodeOf::HTTP_NOT_IMPLEMENTED, description: 'Not yet implemented')
+        ]
+    )]
+    #[ApiEventMarker( Evt\Set\SetEnter::class)]
+    #[ApiEventMarker( Evt\Set\SetLeave::class)]
+    #[ApiAccessMarker( TypeOfAccessMarker::SET_MEMBER)]
     #[ApiTypeMarker( Root\Api\Operation\Push::class)]
     public function op_push() {
         return response()->json([], CodeOf::HTTP_NOT_IMPLEMENTED);
     }
 
+
+
+
+    #[OA\Post(
+        path: '/api/v1/operations/shift',
+        operationId: 'core.operations.shift',
+        description: "Namespace members of the sets can remove elements from the bottom positions of target sets ",
+        summary: 'shift elements from sets',
+        responses: [
+            new OA\Response( response: CodeOf::HTTP_NOT_IMPLEMENTED, description: 'Not yet implemented')
+        ]
+    )]
+    #[ApiEventMarker( Evt\Set\SetEnter::class)]
+    #[ApiEventMarker( Evt\Set\SetLeave::class)]
+    #[ApiAccessMarker( TypeOfAccessMarker::SET_MEMBER)]
     #[ApiTypeMarker( Root\Api\Operation\Shift::class)]
     public function op_shift() {
         return response()->json([], CodeOf::HTTP_NOT_IMPLEMENTED);
